Fixed alignment of newsfeed

--- a/css/newsfeed.css
+++ b/css/newsfeed.css
@@ -214,13 +214,13 @@ header > * {
 }
 
 .reply-notice {
-    margin-left: 50px;
+    margin-left: 70px;
     color:var(--clr-txt-primary);
     font-size:10px;
 }
 
 .content{
-    margin-left: 50px;
+    margin-left: 70px;
     margin-top: 10px;
     color:var(--clr-txt-primary);
     font-size:14px;
@@ -243,7 +243,7 @@ header > * {
 }
 
 .others-comment {
-    margin-left: 50px;
+    margin-left: 70px;
     color:var(--clr-txt-primary);
     font-size:12px;
 }
